# MediPixel

./: .gitignore  404.html  LICENSE  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml
api/contrast/: index.html
api/denoiser/: index.html
api/noise/: index.html
changelog/: index.html
contributing/: index.html
core/: contrast.py  denoiser.py
docs/: changelog.md  contributing.md  index.md  installation.md  roadmap.md  science.md  usage.md
docs/api/: contrast.md  denoiser.md  noise.md
docs/stylesheets/: extra.css
installation/: index.html
medipixel/core/: contrast.py  denoiser.py  noise.py
medipixel/ui/: canvas.py  histogram.py  main_window.py
roadmap/: index.html
science/: index.html
search/: search_index.json
stylesheets/: extra.css
usage/: index.html
